[package]
name = "backroll"
version = "0.1.0"
edition = "2018"

[dependencies]
backroll_transport = { path = "../backroll_transport" }
bincode = "1.3"
rand = "0.8"
bytemuck = "1.5"
lz4_flex = "0.8"
thiserror = "1.0"
varinteger = "1.0"
async-channel = "1.6"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
parking_lot = "0.11"