[package]
name = "backroll"
version = "0.1.0"
edition = "2018"
authors = ["Hourai Teahouse Developers <contact@houraiteahouse.net>"]
description = "A pure Rust async implementation of GGPO."
repository = "https://github.com/HouraiTeahouse/backroll-rs"
license = "ISC"
readme = "../README.md"

[features]
default = ["bevy"]
bevy = ["bevy_tasks"]

[dependencies]
backroll_transport = { path = "../backroll_transport" }
bincode = "1.3"
rand = "0.8"
bytemuck = "1.5"
thiserror = "1.0"
varinteger = "1.0"
async-channel = "1.6"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
parking_lot = "0.11"
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }
futures-timer = "3.0"
bevy_tasks = { version = "0.5", optional = true }