[package]
name = "backroll"
version = "0.2.0"
edition = "2021"
authors = ["Hourai Teahouse Developers <contact@houraiteahouse.net>"]
description = "A pure Rust async implementation of GGPO."
repository = "https://github.com/HouraiTeahouse/backroll-rs"
license = "ISC"

[features]
default = ["bevy"]
bevy = ["bevy_tasks"]

[dependencies]
backroll_transport = {  path = "../backroll_transport", version = "0.1" }
async-channel = "1.6"
bevy_tasks = { version = "0.6", optional = true }
bincode = "1.3"
bytemuck = "1.5"
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }
futures-timer = "3.0"
parking_lot = "0.11"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tracing = "0.1"
varinteger = "1.0"
smallvec = "1.0"
