[package]
name = "backroll_transport"
version = "0.1.2"
edition = "2018"
authors = ["Hourai Teahouse Developers <contact@houraiteahouse.net>"]
description = "An async transport abstraction layer."
repository = "https://github.com/HouraiTeahouse/backroll-rs"
license = "ISC"

[dependencies]
async-channel = "1.6"
dashmap = "4.0"

[dev-dependencies]
static_assertions = "1.1"
