[package]
name = "backroll_transport_steam"
version = "0.1.0"
edition = "2018"
authors = ["Hourai Teahouse Developers <contact@houraiteahouse.net>"]
description = "A Steamworks implementation for backroll-transport."
repository = "https://github.com/HouraiTeahouse/backroll-rs"
license = "ISC"

[package.metadata.docs.rs]
features = [ "docs-only" ]

[features]
default = []
# Skip looking for the Steamworks SDK for docs builds
docs-only = ["steamworks/docs-only"]

[dependencies]
backroll_transport = { path = "../backroll_transport", version = "0.1" }
async-channel = "1.6"
bevy_tasks = "0.5"
tracing = "0.1"
steamworks = "0.7.0"