[package]
name = "backroll_transport_steam"
version = "0.4.0"
edition = "2021"
authors = ["Hourai Teahouse Developers <contact@houraiteahouse.net>"]
description = "A Steamworks implementation for backroll-transport."
repository = "https://github.com/HouraiTeahouse/backroll-rs"
license = "ISC"

[dependencies]
backroll_transport = { path = "../backroll_transport", version = "0.2" }
async-channel = "1.6"
bevy_tasks = "0.9"
tracing = "0.1"
steamworks = "0.9.0"