[package]
name = "backroll_transport_udp"
version = "0.1.0"
edition = "2018"
authors = ["Hourai Teahouse Developers <contact@houraiteahouse.net>"]
description = "A raw async UDP implementation for backroll-transport."
repository = "https://github.com/HouraiTeahouse/backroll-rs"
license = "ISC"

[dependencies]
backroll_transport = { path = "../backroll_transport", version = "0.1" }
async-channel = "1.6"
async-net = "1.6.0" 
bevy_tasks = "0.6"
tracing = "0.1"

[dev-dependencies]
futures = "0.3"
serial_test = "0.5"