[package]
name = "backroll_transport_udp"
version = "0.4.0"
edition = "2021"
authors = ["Hourai Teahouse Developers <contact@houraiteahouse.net>"]
description = "A raw async UDP implementation for backroll-transport."
repository = "https://github.com/HouraiTeahouse/backroll-rs"
license = "ISC"

[dependencies]
backroll_transport = { path = "../backroll_transport", version = "0.2" }
async-channel = "1.6"
async-net = "1.6.0" 
bevy_tasks = "0.8"
tracing = "0.1"

[dev-dependencies]
futures = "0.3"
serial_test = "0.9"